--- a/style.css
+++ b/style.css
@@ -12,18 +12,9 @@
     box-sizing: border-box;
 }
 
-
-a {
-    text-decoration: none;
-}
-
-img {
-    max-width: 100%;
-}
-
-body {
-    font-family: 'Roboto', sans-serif;
-}
+a { text-decoration: none; }
+img { max-width: 100%; }
+body { font-family: 'Roboto', sans-serif; }
 
 p, li {
     color: var(--secondary);
@@ -36,8 +27,12 @@ section > * {
     margin: 0 auto;
 }
 
+section:not(#header, #footer) {
+    padding: 80px 0;
+}
+
 /* Adding background color to first sections */
-#header, #hero {
+#header, #hero, #footer {
     background-color: var(--primary);
     color: var(--light);
 }
@@ -49,10 +44,9 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 0;
+    padding: 40px 0 0;
 }
 
-/* width for logo */
 .logo {
     max-width: 150px;
 }
@@ -65,13 +59,9 @@ header ul {
     gap: 20px;
 }
 
-/* adding color to nav links */
-header ul li a {
-    color: var(--secondary);
-}
-header ul li a:hover {
-    text-decoration: underline;
-}
+header ul li a { color: var(--secondary); }
+header ul li a:hover { text-decoration: underline; }
+
 
 
 /* HERO SECTION */
@@ -80,8 +70,7 @@ header ul li a:hover {
 #hero > div {
     display: flex;
     align-items: center;
-    gap: 40px;
-    padding: 60px 0 100px 0;
+    gap: 60px;
 }
 
 #hero > div > * {
@@ -92,16 +81,66 @@ header ul li a:hover {
 
 #usp {
     color: var(--primary);
+    text-align: center;
+}
+
+#usp > div {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px 0;
+    gap: 30px;
+}
+
+#usp > div > div {
+    flex: 1;
+}
+
+#usp > div > div > p {
+    color: var(--primary);
 }
 
 #usp img {
-    max-width: 200px;
+    max-width: 150px;
 }
 
 /* TESTIMONIAL SECTION */
 
 #testimonial {
     background-color: var(--secondary);
+    padding: 100px 300px;
+}
+
+#testimonial p.quote {
+    color: var(--primary);
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+}
+
+#testimonial p.person {
+    text-align: right;
+    color: var(--primary);
+    padding-right: 40px;
+    font-weight: bolder;
+}
+
+/* CTA SECTION */
+
+#cta > div {
+    display: flex;
+    background-color: var(--cta);
+    padding: 30px 100px;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px;
+}
+
+/* FOOTER */
+
+#footer {
+    padding: 40px 0;
+    text-align: center;
 }
 
 /* GENERAL STYLING */
@@ -110,6 +149,17 @@ h1 {
     font-size: 48px;
     font-weight: 900;
     color: var(--light);
+}
+
+h2 {
+    font-size: 36px;
+    font-weight: 900;
+    color: var(--primary);
+}
+
+h4 {
+    color: var(--light);
+    font-size: 24px;
 }
 
 .btn {
